添加对lending的监控

--- a/watcher/watcher-bootstrap/deploy/production/node-rinkeby/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node-rinkeby/deployment.yaml
@@ -132,6 +132,16 @@ spec:
               configMapKeyRef:
                 name: watcher-config
                 key: eth-bridge-contract-address
+          - name: "watcher.contract.lending.lending-config"
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-config
+                key: eth-lending-contract-config
+          - name: "watcher.contract.lending.stable-config"
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-config
+                key: eth-stable-contract-config
           - name: "watcher.monitor.cron"
             value: "0 0 12 * * ?"
           - name: "watcher.monitor.threshold"
