--- a/watcher/watcher-bootstrap/src/main/resources/application-prd.yml
+++ b/watcher/watcher-bootstrap/src/main/resources/application-prd.yml
@@ -61,3 +61,4 @@ ai.everylink.chainscan.watcher.plugin:
   TokenSpiPlugin: 230
   TokenWatcher: 230
   TransactionHistorySpiPlugin: 4,230
+  LendingHistorySpiPlugin: 4,230
