--- a/watcher/watcher-bootstrap/src/main/resources/application-test.yml
+++ b/watcher/watcher-bootstrap/src/main/resources/application-test.yml
@@ -61,3 +61,4 @@ ai.everylink.chainscan.watcher.plugin:
   TokenSpiPlugin: 97
   TokenWatcher: 97
   TransactionHistorySpiPlugin: 4,97
+  LendingHistorySpiPlugin: 4,97
