修改二层交易监控

--- a/watcher/watcher-bootstrap/deploy/production/node-rinkeby/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node-rinkeby/deployment.yaml
@@ -137,6 +137,11 @@ spec:
               configMapKeyRef:
                 name: watcher-config
                 key: eth-lending-contract-config
+          - name: "watcher.contract.l2"
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-config
+                key: eth-l2-contract-config
           - name: "watcher.confirm.block"
             valueFrom:
               configMapKeyRef:
