--- a/watcher/watcher-bootstrap/deploy/production/node/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node/deployment.yaml
@@ -106,6 +106,11 @@ spec:
               configMapKeyRef:
                 name: watcher-config
                 key: dtx-watcher-confirm-block
+          - name: "watcher.contract.l2"
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-config
+                key: dtx-l2-contract-config
           - name: "coin.ether.api"
             valueFrom:
               configMapKeyRef:
