--- a/watcher/watcher-bootstrap/deploy/sandbox/node-rinkeby/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-rinkeby/deployment.yaml
@@ -111,6 +111,11 @@ spec:
               configMapKeyRef:
                 name: watcher-config
                 key: eth-watcher-confirm-block
+          - name: "watcher.contract.l2"
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-config
+                key: eth-l2-contract-config
           - name: "watcher.bridge.contract.address"
             value: "0x707051c90909741a340eccc47f0527a8a57d5708"
           - name: "watcher.contract.lending.lending-config"
