--- a/watcher/watcher-bootstrap/deploy/sandbox/node-dtx/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-dtx/deployment.yaml
@@ -91,6 +91,11 @@ spec:
               configMapKeyRef:
                 name: rocketmq-config
                 key: rocketmq.server.addr
+          - name: "rocketmq.name-server"
+            valueFrom:
+              configMapKeyRef:
+                name: rocketmq-config
+                key: rocketmq.server.addr
           - name: "coin.ether.api"
             valueFrom:
               configMapKeyRef:
