--- a/watcher/watcher-plugin/watcher-plugin-transaction-history/pom.xml
+++ b/watcher/watcher-plugin/watcher-plugin-transaction-history/pom.xml
@@ -35,6 +35,11 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
             <groupId>ai.everylink.chainscan</groupId>
             <artifactId>watcher-dao</artifactId>
             <version>1.0.0-SNAPSHOT</version>
