--- a/watcher/watcher-plugin/watcher-plugin-transaction-history/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-transaction-history/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://exchange-mysql5-7.database.svc.cluster.local:3306/bridge?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=ZxcvAsdf
+
+rocketmq.name-server=rocketmq-namesrv.database.svc.cluster.local:9876
+
