--- a/watcher/watcher-bootstrap/deploy/sandbox/node-rinkeby/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-rinkeby/deployment.yaml
@@ -106,6 +106,10 @@ spec:
             value: true
           - name: "watcher.process.only.evmplugin"
             value: false
+          - name: "watcher.transaction.bridge.group"
+            value: "eth-watcher-transaction-bridge-group"
+          - name: "bridge.proposal"
+            value: "eth-bridge-proposal"
           - name: "watcher.confirm.block"
             valueFrom:
               configMapKeyRef:
