--- a/watcher/watcher-bootstrap/deploy/sandbox/node-rinkeby/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-rinkeby/deployment.yaml
@@ -138,7 +138,7 @@ spec:
                 name: watcher-config
                 key: eth-stable-contract-config
           - name: "watcher.monitor.cron"
-            value: "0 0 12 * * ?"
+            value: "0 */1 * * * ?"
           - name: "watcher.monitor.threshold"
             value: "10"
           - name: "start.block.number"
