--- a/watcher/watcher-bootstrap/deploy/sandbox/node-bnb/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-bnb/deployment.yaml
@@ -109,7 +109,7 @@ spec:
           - name: "watcher.process.concurrent.switch"
             value: false
           - name: "watcher.insert.transaction.log"
-            value: true
+            value: false
           - name: "watcher.process.only.evmplugin"
             value: false
           - name: "watcher.transaction.bridge.group"
