--- a/watcher/watcher-bootstrap/deploy/production/node-goerli/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node-goerli/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: $APP_NAME-rinkeby-sandbox
+  name: $APP_NAME-goerli-production
   namespace: paas
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: $APP_NAME-rinkeby-sandbox
+      app: $APP_NAME-goerli-production
   template:
     metadata:
       labels:
-        app: $APP_NAME-rinkeby-sandbox
+        app: $APP_NAME-goerli-production
     spec:
       containers:
-      - name: $APP_NAME-rinkeby-sandbox
+      - name: $APP_NAME-goerli-production
         image:  $REGISTRY/$APP_NAME:SNAPSHOT-$BUILD_NUMBER
         livenessProbe:
           httpGet:
@@ -34,7 +34,7 @@ spec:
             memory: 2Gi
           limits:
             cpu: 0.5
-            memory: 8Gi
+            memory: 4Gi
         volumeMounts:
         - name: host-time
           mountPath: /etc/localtime
@@ -43,11 +43,9 @@ spec:
         - containerPort: 9196
         env:
           - name: "spring.profiles.active"
-            value: "test"
+            value: "prd"
           - name: TZ
             value: UTC
-          - name: "evm.chain.rinkebyUrl"
-            value: "http://ethereum-client-sandbox.chain-sandbox.svc.cluster.local:8545"
           - name: "nacos.config.server-addr"
             valueFrom:
               configMapKeyRef:
@@ -56,19 +54,39 @@ spec:
           - name: "spring.datasource.chainscan.jdbc-url"
             valueFrom:
               secretKeyRef:
-                name: database-rinkeby
+                name: database-goerli
                 key: url
           - name: "spring.datasource.chainscan.username"
             valueFrom:
               secretKeyRef:
-                name: database-rinkeby
+                name: database-goerli
                 key: username
           - name: "spring.datasource.chainscan.password"
             valueFrom:
               secretKeyRef:
-                name: database-rinkeby
+                name: database-goerli
                 key: password
+          - name: "spring.datasource.wallet.jdbc-url"
+            valueFrom:
+              secretKeyRef:
+                name: database-wallet
+                key: wallet-url
+          - name: "spring.datasource.wallet.username"
+            valueFrom:
+              secretKeyRef:
+                name: database-wallet
+                key: wallet-username
+          - name: "spring.datasource.wallet.password"
+            valueFrom:
+              secretKeyRef:
+                name: database-wallet
+                key: wallet-password
           - name: "watcher.rocketmq.server.addr"
+            valueFrom:
+              configMapKeyRef:
+                name: rocketmq-config
+                key: rocketmq.server.addr
+          - name: "rocketmq.name-server"
             valueFrom:
               configMapKeyRef:
                 name: rocketmq-config
@@ -89,49 +107,50 @@ spec:
                 name: network-config
                 key: dtx.rpc.api
           - name: "watcher.vmChainUrl"
-            value: "http://ethereum-client-sandbox.chain-sandbox.svc.cluster.local:8545"
+            valueFrom:
+              configMapKeyRef:
+                name: network-config
+                key: eth.rpc.api
           - name: "watcher.chain.scanStep"
             value: 1
           - name: "watcher.chain.chainId"
-            value: 4
+            value: 5
+          - name: "watcher.insert.transaction.log"
+            value: false
           - name: "watcher.chain.chainType"
             value: EVM_PoW
           - name: "watcher.notify.template"
-            value: RINKEBY
+            value: Goerli
           - name: "watcher.scan.switch"
             value: false
           - name: "watcher.process.concurrent.switch"
             value: false
-          - name: "watcher.insert.transaction.log"
-            value: true
           - name: "watcher.process.only.evmplugin"
             value: false
           - name: "watcher.transaction.bridge.group"
             value: "eth-watcher-transaction-bridge-group"
           - name: "bridge.proposal"
             value: "eth-bridge-proposal"
-          - name: "watcher.confirm.block"
-            valueFrom:
-              configMapKeyRef:
-                name: watcher-config
-                key: eth-watcher-confirm-block
-          - name: "watcher.contract.l2"
-            valueFrom:
-              configMapKeyRef:
-                name: watcher-config
-                key: eth-l2-contract-config
-          - name: "rocketmq.name-server"
-            valueFrom:
-              configMapKeyRef:
-                name: rocketmq-config
-                key: rocketmq.server.addr
           - name: "watcher.bridge.contract.address"
-            value: "0x707051c90909741a340eccc47f0527a8a57d5708"
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-config
+                key: eth-bridge-contract-address
           - name: "watcher.contract.lending.lending-config"
             valueFrom:
               configMapKeyRef:
                 name: watcher-config
                 key: eth-lending-contract-config
+          - name: "watcher.contract.l2"
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-config
+                key: eth-l2-contract-config
+          - name: "watcher.confirm.block"
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-config
+                key: eth-watcher-confirm-block
           - name: "watcher.contract.lending.stable-config"
             valueFrom:
               configMapKeyRef:
@@ -162,11 +181,6 @@ spec:
                   - key: app
                     operator: In
                     values:
-                      - $APP_NAME-dtx-sandbox
-                      - $APP_NAME-rinkeby-sandbox
-                      - $APP_NAME-rinkeby-job-1-sandbox
-                      - $APP_NAME-rinkeby-job-2-sandbox
-                      - $APP_NAME-rinkeby-job-3-sandbox
-                      - $APP_NAME-rinkeby-job-4-sandbox
-                      - $APP_NAME-rinkeby-job-5-sandbox
+                      - $APP_NAME-dtx-production
+                      - $APP_NAME-goerli-production
               topologyKey: "kubernetes.io/hostname"
