--- a/watcher/watcher-bootstrap/src/main/resources/application-local.yml
+++ b/watcher/watcher-bootstrap/src/main/resources/application-local.yml
@@ -57,5 +57,5 @@ ai.everylink.chainscan.watcher.plugin:
 #  TokenSpiPlugin: 97
 #  TokenWatcher: 97
 #  TransactionHistorySpiPlugin: 4,97
-  LendingHistorySpiPlugin: 4,97
+#  LendingHistorySpiPlugin: 4,97
 
