--- a/watcher/watcher-plugin/watcher-plugin-transaction-history/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-transaction-history/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.password=ZxcvAsdf
 
 rocketmq.name-server=rocketmq-namesrv.database.svc.cluster.local:9876
 
+watcher.transaction.bridge.group=dtx-watcher-transaction-bridge-group
+bridge.proposal=dtx
+
