--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.datasource.chainscan.username=root
 spring.datasource.chainscan.password=ZxcvAsdf
 evm.chain.scanStep=1
 evm.chain.processStep=1
-evm.chain.chainId=4
+evm.chain.chainId=186
 evm.chain.chainType=EVM_PoS
-#evm.chain.chainRpcUrl=http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
-evm.chain.chainRpcUrl=http://ethereum-client-sandbox.chain-sandbox.svc.cluster.local:8545
+evm.chain.chainRpcUrl=https://bsc.getblock.io/testnet/?api_key=cffe89af-585f-44d8-a5d8-fe2e4ca3f9d2
+#evm.chain.chainRpcUrl=http://ethereum-client-sandbox.chain-sandbox.svc.cluster.local:8545
 
 evm.chain.rocketmqSrvAddr=rocketmq-namesrv.database.svc.cluster.local:9876
 
