--- a/watcher/watcher-bootstrap/deploy/sandbox/node-dtx/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-dtx/deployment.yaml
@@ -128,6 +128,13 @@ spec:
               configMapKeyRef:
                 name: watcher-config
                 key: dtx-chain-id
+          - name: "watcher.chain.dtxChainId"
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-config
+                key: dtx-chain-id
+          - name: "watcher.finalized.status.switch"
+            value: true
           - name: "watcher.chain.chainType"
             value: EVM_PoS
           - name: "watcher.notify.template"
