--- a/watcher/watcher-bootstrap/deploy/production/node/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node/deployment.yaml
@@ -146,7 +146,7 @@ spec:
           - name: "watcher.chain.chainId"
             value: 230
           - name: "watcher.finalized.status.switch"
-            value: true
+            value: false
           - name: "watcher.transaction.bridge.group"
             value: "dtx-watcher-transaction-bridge-group"
           - name: "bridge.proposal"
