--- a/watcher/watcher-bootstrap/deploy/production/node-goerli/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node-goerli/deployment.yaml
@@ -117,6 +117,8 @@ spec:
             value: 5
           - name: "watcher.insert.transaction.log"
             value: false
+          - name: "watcher.select.transaction.log"
+            value: true
           - name: "watcher.chain.chainType"
             value: EVM_PoW
           - name: "watcher.notify.template"
