--- a/watcher/watcher-bootstrap/deploy/sandbox/node-bnb/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-bnb/deployment.yaml
@@ -110,6 +110,8 @@ spec:
             value: false
           - name: "watcher.insert.transaction.log"
             value: false
+          - name: "watcher.select.transaction.log"
+            value: false
           - name: "watcher.process.only.evmplugin"
             value: false
           - name: "watcher.transaction.bridge.group"
