--- a/watcher/watcher-bootstrap/deploy/sandbox/node-dtx/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-dtx/deployment.yaml
@@ -140,6 +140,10 @@ spec:
             value: false
           - name: "watcher.process.only.evmplugin"
             value: false
+          - name: "watcher.insert.transaction.log"
+            value: true
+          - name: "watcher.select.transaction.log"
+            value: true
           - name: "watcher.transaction.bridge.group"
             value: "dtx-watcher-transaction-bridge-group"
           - name: "bridge.proposal"
