--- a/watcher/watcher-bootstrap/deploy/sandbox/node-goerli/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-goerli/deployment.yaml
@@ -108,7 +108,7 @@ spec:
           - name: "watcher.insert.transaction.log"
             value: false
           - name: "watcher.select.transaction.log"
-            value: true
+            value: false
           - name: "watcher.process.only.evmplugin"
             value: false
           - name: "watcher.transaction.bridge.group"
