--- a/watcher/watcher-bootstrap/deploy/production/node-goerli/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node-goerli/deployment.yaml
@@ -167,6 +167,11 @@ spec:
               configMapKeyRef:
                 name: watcher-config
                 key: eth-start-block-number
+          - name: "watcher.l2.rpc.url"
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-config
+                key: eth-l2-rpc-url
       volumes:
       - name: host-time
         hostPath:
