--- a/watcher/watcher-bootstrap/deploy/production/node/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node/deployment.yaml
@@ -174,6 +174,11 @@ spec:
               configMapKeyRef:
                 name: watcher-config
                 key: dtx-bridge-contract-address
+          - name: "watcher.l2.rpc.url"
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-config
+                key: dtx-l2-rpc-url
       volumes:
       - name: host-time
         hostPath:
