--- a/watcher/watcher-bootstrap/deploy/production/node-goerli/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node-goerli/deployment.yaml
@@ -167,7 +167,7 @@ spec:
               configMapKeyRef:
                 name: watcher-config
                 key: eth-start-block-number
-          - name: "watcher.l2.rpc.url"
+          - name: "watcher.l2.rest.api"
             valueFrom:
               configMapKeyRef:
                 name: watcher-config
