--- a/watcher/watcher-bootstrap/deploy/production/node-bnb/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node-bnb/deployment.yaml
@@ -172,7 +172,7 @@ spec:
               configMapKeyRef:
                 name: watcher-config
                 key: bnb-start-block-number
-          - name: "watcher.l2.rpc.url"
+          - name: "watcher.l2.rest.api"
             valueFrom:
               configMapKeyRef:
                 name: watcher-config
