--- a/watcher/watcher-bootstrap/deploy/sandbox/node-dtx/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-dtx/deployment.yaml
@@ -153,7 +153,7 @@ spec:
               configMapKeyRef:
                 name: watcher-config
                 key: dtx-start-block-number
-          - name: "watcher.l2.rpc.url"
+          - name: "watcher.l2.rest.api"
             valueFrom:
               configMapKeyRef:
                 name: watcher-config
